<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to_encrypto"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/GetMessage"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_message_for_encryption"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonForEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/encrypted_message"
        android:textSize="14sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EncrypKey"
        app:strokeColor="#FFFFFF" />

    <EditText
        android:id="@+id/EncrypKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_encryption_key"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GetMessage" />

    <EditText
        android:id="@+id/GetMessage1"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_message_for_decryption"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/GetMessage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GetMessage"
        app:layout_constraintTop_toBottomOf="@+id/buttonForEncrypt"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonForDecrypt"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/decrypt_message"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DecrypKey" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:text="@string/made_by_soumyadeep"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FF4081"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForDecrypt"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/DecrypKey"
        android:layout_width="201dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_decryption_key"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/buttonForEncrypt"
        app:layout_constraintTop_toBottomOf="@+id/GetMessage1" />

</androidx.constraintlayout.widget.ConstraintLayout>